working nginx config

--- a/NGINX - v1.26.2/html/errors/502.html
+++ b/NGINX - v1.26.2/html/errors/502.html
@@ -10,7 +10,7 @@
 
 			<h1>Bad Gateway 502</h1>
 
-			<img src="502.png" title="car in pc" alt="Car in server" style="width:500px;height:450px;">
+			<img src="/errors/502.png" title="car in pc" alt="Car in server" style="width:500px;height:450px;">
 
 			<h1>Upstream server failure</h1>
 
