minor clean up and rewrite

--- a/NGINX-v1.26.2/html/landingPage.html
+++ b/NGINX-v1.26.2/html/landingPage.html
@@ -23,7 +23,7 @@
 	
 		<nav>
 			<p align="right" style="margin-right:10em;">
-				<a href="/fileSharing" style="padding:10px;">File Sharing</a> 
+				<a href="/fileSharing/login" style="padding:10px;">File Sharing</a> 
 				<a href="/dataCollection">Data Collection</a>
 			</p>
 		</nav>
