--- a/NGINX-v1.26.2/html/dataCollection.html
+++ b/NGINX-v1.26.2/html/dataCollection.html
@@ -20,21 +20,23 @@
 	</head>
 
 	<body>
-	
+
 		<nav link="#0067C0" alink="aqua" vlink="coral">
 			<p align="right" style="margin-right:10em;">
 				<a href="/">Back to Main-Page</a>
 			</p>
 		</nav>
-	
+
 		<center>
-			
+
 			<h1>What does this side collect</h1>
 			<p style="font-size: 18px;">And for how long</p>
-	
+
 			<p style="max-width: 600px;margin-top:40px;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-			
-			<footer></footer>
+
 		</center>
+
+		<div class="footer"/>
+
 	</body>
 </html> 
