--- a/NGINX-v1.26.2/html/landingPage.html
+++ b/NGINX-v1.26.2/html/landingPage.html
@@ -11,6 +11,15 @@
 		padding-left: 10px;
 		padding-right: 10px;
 	}
+
+	.footer {
+		background: #bbbbbb;
+		position: fixed;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		height: 50px;
+	}
 </style>
 
 <html style="background-color:#202020;font-family:Helvetica;color:#fbfbfb;">
@@ -19,9 +28,9 @@
 		<title>Landing Page</title>
 	</head>
 
-	<body link="#0067C0" alink="aqua" vlink="coral">
-	
-		<nav>
+	<body>
+
+		<nav link="#0067C0" alink="aqua" vlink="coral">
 			<p align="right" style="margin-right:10em;">
 				<a href="/fileSharing/login" style="padding:10px;">File Sharing</a> 
 				<a href="/dataCollection">Data Collection</a>
@@ -31,7 +40,7 @@
 		<center>
 			<h1>Landing Page</h1>
 			<p style="font-size: 18px;">Access for authorized humans only</p>
-	
+
 			<table style="margin-top: 48px;">
 				<tr>
 					<td style="text-align: center;">Port</td>
@@ -48,9 +57,11 @@
 					<td> --- </td>
 					<td> --- </td>
 				</tr>
-			</table> 
-			
-			<footer></footer>
+			</table>
+
 		</center>
+
+		<div class="footer"/>
+
 	</body>
 </html>
