--- a/Server/html/controlPanel/createUser.html
+++ b/Server/html/controlPanel/createUser.html
@@ -54,8 +54,8 @@
 
 			<div style="width: 350px;">
 				<form method="POST" action="" style="margin-top: 10px;">
-					<input type="text" name="user" placeholder="login username" required />
-					<input type="text" name="user" placeholder="display username" required />
+					<input type="text" name="loginUsername" placeholder="login username" required />
+					<input type="text" name="displayUsername" placeholder="display username" required />
 					<input type="password" name="password" placeholder="password" required />
 
 					<div style="width: 300px;">
