--- a/NGINX-v1.26.2/html/landingPage.html
+++ b/NGINX-v1.26.2/html/landingPage.html
@@ -38,10 +38,14 @@
 		</nav>
 	
 		<center>
-			<h1>Landing Page</h1>
-			<p style="font-size: 18px;">Access for authorized humans only</p>
 
-			<table style="margin-top: 48px;">
+			<h1>Web Root</h1>
+
+			<hr style="margin-right:10em; margin-left:10em;" />
+
+			<p style="font-size: 18px; margin-top: 40px">Access for authorized humans only</p>
+
+			<table style="margin-top: 10px;">
 				<tr>
 					<td style="text-align: center;">Port</td>
 					<td style="text-align: center;">Service</td>
