--- a/Server/html/controlPanel/controlPanel.html
+++ b/Server/html/controlPanel/controlPanel.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 
 <style>
+	input, button {
+		margin-bottom: 12px;
+		border-radius: 5px;
+		width: 100%;
+		height: 20px;
+		align-self: center;
+		background: #bbbbbb;
+	}
+
 	.footer {
 		background: #bbbbbb;
 		position: fixed;
 		left: 0;
 		right: 0;
 		bottom: 0;
-		height: 50px;
+		height: 2.5vw;
 	}
 </style>
 
@@ -17,30 +26,47 @@
 		<title>Control Panel</title>
 	</head>
 
-	<body>
+	<body style="margin-top: 1em">
 
 		<nav link="#0067C0" alink="aqua" vlink="coral">
-			<p align="right" style="margin-right:10em;">
-				<a href="/" style="padding:10px;">Back to Main-Page</a>
-				<a href="/fileSharing/logout">Log out</a>
-			</p>
+			<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 0px; margin-left: 10em; margin-right: 10em;">
+				<div style="text-align: left;">
+					<a href="/fileSharing/changePassword" align="left">Change Password</a>
+				</div>
+				<div style="text-align: right;">
+					<a href="/" style="padding:10px;">Back to Main-Page</a>
+					<a href="/fileSharing/logout">Log out</a>
+				</div>
+			</div>
 		</nav>
 
-		<center>
+		<center style="margin-right:10em; margin-left:10em;">
 
-			<h1>Control Panel</h1>
-			<p style="font-size: 16px; margin-top: -10px">Logged in as: admin</p>
+			<h1><span style="color: lightcoral">Control Panel</span></h1>
 
-			<form method="GET" action="/fileSharing/controlPanel/createUser">
-				<button type="submit" style="width: 120px; height:23px; font-size: 13px; margin-top: 18px">Create new user</button>
-			</form>
+			<hr />
 
-			<hr style="margin-right:10em; margin-left:10em; margin-top: 40px;" />
+			<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 0px; margin-left: 20em; margin-right: 20em; margin-top: 40px;">
+				<div style="text-align: center;">
+					<form method="GET" action="/fileSharing/controlPanel/createUser">
+						<button type="submit" style="width: 120px; height:32px; font-size: 14px; margin-top: 8px">Create new user</button>
+					</form>
+				</div>
+				<div style="text-align: center;">
+					<form method="GET" action="/fileSharing/controlPanel/createUser">
+						<button type="submit" style="width: 120px; height:32px; font-size: 14px; margin-top: 8px">View own Files</button>
+					</form>
+				</div>
+			</div>
 
-
+			<!-- #USER#HEAD#ANCHOR# -->
 
 		</center>
 
-		<div class="footer" />
+		<div class="footer" style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 0px; font-size: 0.8vw;">
+			<p style="text-align: left; margin-left: 2em;">Logged in as: <!-- #DISPLAY#USERNAME#ANCHOR# --></p>
+			<p style="text-align: center"><!-- #INFO#ANCHOR# --></p>
+			<p style="text-align: right; margin-right: 2em;">Threadpool Threads: <!-- #THREADPOOL#ANCHOR# --></p>
+		</div>
 	</body>
 </html>
