added user name list to control panel

--- a/Server/html/controlPanel/controlPanel.html
+++ b/Server/html/controlPanel/controlPanel.html
@@ -26,7 +26,7 @@
 		<title>Control Panel</title>
 	</head>
 
-	<body style="margin-top: 1em">
+	<body style="margin-top: 1em; padding-bottom: 10em;">
 
 		<nav link="#0067C0" alink="aqua" vlink="coral">
 			<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 0px; margin-left: 10em; margin-right: 10em;">
