added user config

--- a/Server/html/controlPanel/controlPanel.html
+++ b/Server/html/controlPanel/controlPanel.html
@@ -24,6 +24,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Control Panel</title>
+		<!-- #SCRIPT#ANCHOR# -->
 	</head>
 
 	<body style="margin-top: 1em; padding-bottom: 10em;">
@@ -42,7 +43,7 @@
 
 		<center style="margin-right:10em; margin-left:10em;">
 
-			<h1><span style="color: lightcoral">Control Panel</span></h1>
+			<h1>Control Panel</h1>
 
 			<hr />
 
