--- a/Server/html/controlPanel/userConfig.html
+++ b/Server/html/controlPanel/userConfig.html
@@ -48,33 +48,34 @@
 	
 		<center>
 	
-			<h1><!-- userDisplayNameAnchor -->'s Settings</h1>
+			<h1><!-- #DISPLAY#NAME#ANCHOR# -->'s Settings</h1>
 	
 			<hr style="margin-right:10em; margin-left:10em;" />
 	
-			<div style="width: 350px; margin-top: 40px;">
-				<form method="POST" action="" style="margin-top: 10px;">
-					
-					<div style="text-align: left">
-						<div title="Lets users have access to administrative tools.">
-							<input type="checkbox" name="isAdmin" id="IsAdmin" unchecked />
-							<label for="IsAdmin">Administrator</label>
-						</div>
-						<div title="Blocks users from logging">
-							<input type="checkbox" name="isEnabled" id="IsEnabled" checked />
-							<label for="IsEnabled">Enabled</label>
-						</div>
-						<div title="Allows users to view and download files.">
-							<input type="checkbox" name="read" id="Read" checked />
-							<label for="Read">Read</label>
-						</div>
-						<div title="Allows users to delete and upload files.">
-							<input type="checkbox" name="write" id="Write" checked />
-							<label for="Write">Write</label>
+			<div style="width: 350px;">
+				<form method="POST" action="/fileSharing/controlPanel/config/update" style="margin-top: 10px;">
+					<input type="text" name="loginUsername" value="<!-- #LOGIN#NAME#ANCHOR# -->" readonly required />
+					<input type="text" name="displayUsername" placeholder="new display name (optional)" />
+					<input type="password" name="password" placeholder="new password (optional)" />
+
+					<div style="width: 300px;">
+						<div style="text-align: left">
+							<div title="Blocks users from logging">
+								<input type="checkbox" name="isEnabled" id="IsEnabled" <!-- #IsEnabled#ANCHOR# --> />
+								<label for="IsEnabled">Enabled</label>
+							</div>
+							<div title="Allows users to view and download files.">
+								<input type="checkbox" name="read" id="Read" <!-- #Read#ANCHOR# --> />
+								<label for="Read">Read</label>
+							</div>
+							<div title="Allows users to delete and upload files.">
+								<input type="checkbox" name="write" id="Write" <!-- #Write#ANCHOR# --> />
+								<label for="Write">Write</label>
+							</div>
 						</div>
 					</div>
-	
-					<input type="submit" value="Create User" style="width: 200px; height:32px; font-size: 16px;"/>
+
+					<input type="submit" value="Update User" style="width: 200px; height:26px; font-size: 13px; margin-top: 8px" />
 				</form>
 			</div>
 	
