--- a/Server/html/changePassword.html
+++ b/Server/html/changePassword.html
@@ -6,8 +6,19 @@
 		border-radius: 5px;
 		width: 100%;
 		height: 20px;
-		align-self: center;
 		background: #bbbbbb;
+	}
+
+	input[type=checkbox] {
+		width: 20px;
+		height: 20px;
+	}
+
+	input[type=submit] {
+		width: 200px;
+		height: 32px;
+		color: #1a1a1a;
+		font-size: 16px;
 	}
 
 	.footer {
@@ -21,37 +32,38 @@
 </style>
 
 <html style="background-color:#202020;font-family:Helvetica;color:#fbfbfb;">
-	<head>
-		<meta charset="utf-8">
-		<title>SFS Login</title>
-	</head>
+<head>
+	<meta charset="utf-8">
+	<title>Settings</title>
+</head>
 
-	<body>
+<body>
 
-		<nav link="#0067C0" alink="aqua" vlink="coral">
-			<p align="right" style="margin-right:10em;">
-				<a href="/">Back to Main-Page</a>
-			</p>
-		</nav>
+	<nav link="#0067C0" alink="aqua" vlink="coral">
+		<p align="right" style="margin-right:10em;">
+			<a href="/fileSharing/logout">Log out</a>
+		</p>
+	</nav>
 
-		<center>
+	<center>
 
-			<h1>File-Sharing Login</h1>
+		<h1><!-- #DISPLAY#NAME#ANCHOR# -->'s Settings</h1>
 
-			<hr style="margin-right:10em; margin-left:10em;" />
+		<hr style="margin-right:10em; margin-left:10em;" />
 
-			<p style="font-size: 18px; margin-top: 40px">Please enter your username and password</p>
+		<div style="width: 350px; margin-top: 40px;">
+			<form method="POST" action="/fileSharing/changePassword" style="margin-top: 10px;">
+				<input type="text" name="loginUsername" value="<!-- #LOGIN#NAME#ANCHOR# -->" readonly required />
+				<input type="text" name="displayUsername" placeholder="new display name (optional)" />
+				<input type="password" name="password" placeholder="new password (optional)" />
+				<input type="submit" value="Update Settings" style="width: 200px; height:26px; font-size: 13px; margin-top: 8px" />
+			</form>
+		</div>
 
-			<div style=" width: 350px; margin-top: 10px">
-				<form method="POST" action="">
-					<input type="text" name="user" placeholder="username" required />
-					<input type="password" name="password" placeholder="password" required />
-					<input type="submit" value="Enter" style="width: 120px; height:23px; font-size: 13px; margin-top: 8px" />
-				</form>
-			</div>
+	</center>
 
-		</center>
-
-		<div class="footer"/>
-	</body>
+	<div class="footer" style="text-align: center;">
+		<p style="color: #1a1a1a"><!-- footAnchor --></p>
+	</div>
+</body>
 </html>
