--- a/Server/html/controlPanel/userConfig.html
+++ b/Server/html/controlPanel/userConfig.html
@@ -52,7 +52,7 @@
 	
 			<hr style="margin-right:10em; margin-left:10em;" />
 	
-			<div style="width: 350px;">
+			<div style="width: 350px; margin-top: 40px;">
 				<form method="POST" action="/fileSharing/controlPanel/config/update" style="margin-top: 10px;">
 					<input type="text" name="loginUsername" value="<!-- #LOGIN#NAME#ANCHOR# -->" readonly required />
 					<input type="text" name="displayUsername" placeholder="new display name (optional)" />
