--- a/Server/html/controlPanel/createUser.html
+++ b/Server/html/controlPanel/createUser.html
@@ -42,17 +42,13 @@
             text-align: center;
         }
 
-        p {
-            margin: 20px 0;
-        }
-
         label {
             display: block;
             margin: 10px 0 5px;
         }
 
         input[type="text"], input[type="password"] {
-            width: 100%;
+            width: 96.4%;
             padding: 10px;
             margin-bottom: 15px;
             border: 1px solid #404040;
@@ -94,7 +90,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            height: 50px;
+            height: 2.5vw;
         }
     </style>
 </head>
@@ -108,26 +104,26 @@
         <p>Please enter the information below to create a new user. Ensure all required fields are completed.</p>
         <form action="" method="post">
             <label for="username">Username</label>
-            <input type="text" id="loginUsername" name="loginUsername" required>
+            <input type="text" id="loginUsername" name="loginUsername" required />
 
             <label for="displayName">Display Name</label>
-            <input type="text" id="displayUsername" name="displayUsername" required>
+            <input type="text" id="displayUsername" name="displayUsername" required />
 
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password" required />
 
             <label>
-                <input type="checkbox" name="isEnabled" checked>
+                <input type="checkbox" name="isEnabled" checked />
                 Enable User
             </label>
 
             <label>
-                <input type="checkbox" name="write">
+                <input type="checkbox" name="write" />
                 Write Access
             </label>
 
             <label>
-                <input type="checkbox" name="read">
+                <input type="checkbox" name="read" />
                 Read Access
             </label>
 
@@ -135,11 +131,7 @@
         </form>
     </main>
 
-    <div class="footer" style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 0px; font-size: 0.8vw;">
-        <p style="text-align: left; margin-left: 2em;">Logged in as: <!-- #DISPLAY#USERNAME#ANCHOR# --></p>
-        <p style="text-align: center"><!-- #INFO#ANCHOR# --></p>
-        <p style="text-align: right; margin-right: 2em;">Threadpool Threads: <!-- #THREADPOOL#ANCHOR# --></p>
-    </div>
+    <div class="footer" />
 
 </body>
 </html>
