added change password

--- a/Server/html/changePassword.html
+++ b/Server/html/changePassword.html
@@ -1,69 +1,118 @@
 <!DOCTYPE html>
-
-<style>
-	input {
-		margin-bottom: 12px;
-		border-radius: 5px;
-		width: 100%;
-		height: 20px;
-		background: #bbbbbb;
-	}
-
-	input[type=checkbox] {
-		width: 20px;
-		height: 20px;
-	}
-
-	input[type=submit] {
-		width: 200px;
-		height: 32px;
-		color: #1a1a1a;
-		font-size: 16px;
-	}
-
-	.footer {
-		background: #bbbbbb;
-		position: fixed;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		height: 50px;
-	}
-</style>
-
-<html style="background-color:#202020;font-family:Helvetica;color:#fbfbfb;">
+<html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Settings</title>
+	<style>
+		body {
+			background-color: #202020;
+			color: #fbfbfb;
+			font-family: Helvetica, Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+		}
+
+		header {
+			display: flex;
+			justify-content: flex-end;
+			align-items: center;
+			padding: 10px 20px;
+			background-color: #303030;
+		}
+
+			header a {
+				color: #fbfbfb;
+				text-decoration: none;
+				margin: 0 10px;
+			}
+
+				header a:hover {
+					text-decoration: underline;
+				}
+
+		main {
+			margin: 50px auto;
+			width: 80%;
+			max-width: 600px;
+			text-align: left;
+		}
+
+		h1 {
+			text-align: center;
+		}
+
+		label {
+			display: block;
+			margin: 10px 0 5px;
+		}
+
+		input[type="text"], input[type="password"] {
+			width: 96.4%;
+			padding: 10px;
+			margin-bottom: 15px;
+			border: 1px solid #404040;
+			background-color: #303030;
+			color: #fbfbfb;
+		}
+
+		button {
+			background-color: #404040;
+			color: #fbfbfb;
+			border: none;
+			padding: 10px 20px;
+			margin-top: 20px;
+			font-size: 16px;
+			cursor: pointer;
+			display: block;
+			width: 100%;
+		}
+
+			button:hover {
+				background-color: #505050;
+			}
+
+		hr {
+			border: none;
+			border-top: 2px solid #404040;
+			margin: 30px 0;
+			width: 100%;
+			max-width: 600px;
+		}
+
+		.footer {
+			background: #bbbbbb;
+			position: fixed;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			height: 2.5vw;
+		}
+	</style>
 </head>
-
 <body>
-
-	<nav link="#0067C0" alink="aqua" vlink="coral">
-		<p align="right" style="margin-right:10em;">
-			<a href="/fileSharing/logout">Log out</a>
-		</p>
-	</nav>
-
-	<center>
-
+	<header>
+		<a href="/fileSharing/logout">Log out</a>
+	</header>
+	<main>
 		<h1><!-- #DISPLAY#NAME#ANCHOR# -->'s Settings</h1>
+		<hr>
+		<p>Please enter the information below to update your user</p>
+		<form action="/fileSharing/changePassword/commit" method="post">
+			<label for="username">Username</label>
+			<input type="text" id="loginUsername" value="<!-- #LOGIN#NAME#ANCHOR# -->" name="loginUsername" readonly required />
 
-		<hr style="margin-right:10em; margin-left:10em;" />
+			<label for="displayName">Display Name</label>
+			<input type="text" id="displayUsername" placeholder="new display name (optional)" name="displayUsername" />
 
-		<div style="width: 350px; margin-top: 40px;">
-			<form method="POST" action="/fileSharing/changePassword" style="margin-top: 10px;">
-				<input type="text" name="loginUsername" value="<!-- #LOGIN#NAME#ANCHOR# -->" readonly required />
-				<input type="text" name="displayUsername" placeholder="new display name (optional)" />
-				<input type="password" name="password" placeholder="new password (optional)" />
-				<input type="submit" value="Update Settings" style="width: 200px; height:26px; font-size: 13px; margin-top: 8px" />
-			</form>
-		</div>
+			<label for="password">Password</label>
+			<input type="password" id="password" placeholder="new password (optional)" name="password" />
 
-	</center>
+			<button type="submit">Update</button>
+		</form>
+	</main>
 
-	<div class="footer" style="text-align: center;">
-		<p style="color: #1a1a1a"><!-- footAnchor --></p>
-	</div>
+	<div class="footer" />
+
 </body>
 </html>
