implemented download and other routing

--- a/Server/html/uploadFile.html
+++ b/Server/html/uploadFile.html
@@ -87,7 +87,7 @@
             <h1>Upload a File</h1>
 
             <form action="/fileSharing/files/upload" method="post" enctype="multipart/form-data">
-                <input type="file" name="fileName" required>
+                <input type="file" name="name" required>
                 <button type="submit" style="margin-top: 20px; background-color: #404040; padding: 10px 20px; border: none; color: #fbfbfb; cursor: pointer; font-size: 16px;">Upload</button>
             </form>
 
