--- a/Server/html/userFiles.html
+++ b/Server/html/userFiles.html
@@ -128,38 +128,15 @@
     </header>
     <main>
         <div class="control-panel">
-            <h1>Your Files</h1>
+            <h1><!-- #HEADLINE#ANCHOR# --></h1>
             <form action="/fileSharing/files/upload" method="get" style="display: inline;">
                 <button type="submit">Upload File</button>
             </form>
         </div>
 
-            <table>
-                <tr>
-                    <td><span style="margin: 1em">yest.mv4</span></td>
-                    <td>
-                        <form method="POST" action="/fileSharing/files/remove" style="width: 64px; margin-top: 10px; margin-bottom: -2px; margin-left: 2px; margin-right: 2px;">
-                            <input type="hidden" name="fileName" value="encodedName" required readonly />
-                            <input type="submit" value="Delete" style="height:23px; font-size: 13px" />
-                        </form>
-                    </td>
-                    <td>
-                        <form method="POST" action="/fileSharing/files/download" style="width: 84px; margin-top: 10px; margin-bottom: -2px; margin-left: 2px; margin-right: 2px;">
-                            <input type="hidden" name="fileName" value="encodedName" required readonly />
-                            <input type="submit" value="Download" style="height:23px; font-size: 13px" />
-                        </form>
-                    </td>
-                    <td><span style="margin: 1em">400 Yibbabytes</span></td>
-                </tr>
-                <tr>
-                    <td> nodelsssssssssssssssssssess.pdf </td>
-                    <td> --- </td>
-                    <td> --- </td>
-                    <td><span style="margin: 1em">400 Yibbabytes</span></td>
-                </tr>
-            </table>
-
+        <table>
             <!-- #FILE#ANCHOR# -->
+        </table>
 
     </main>
 
