--- a/Server/html/userFiles.html
+++ b/Server/html/userFiles.html
@@ -129,9 +129,7 @@
     <main>
         <div class="control-panel">
             <h1><!-- #HEADLINE#ANCHOR# --></h1>
-            <form action="/fileSharing/files/upload" method="get" style="display: inline;">
-                <button type="submit">Upload File</button>
-            </form>
+            <!-- #UPLOAD#ANCHOR# -->
         </div>
 
         <table>
