--- a/Server/html/uploadFile.html
+++ b/Server/html/uploadFile.html
@@ -86,9 +86,9 @@
         <div class="upload-section">
             <h1>Upload a File</h1>
 
-            <form action="/fileSharing/files/upload" method="post" enctype="multipart/form-data">
-                <input type="file" name="name" required>
-                <button type="submit" style="margin-top: 20px; background-color: #404040; padding: 10px 20px; border: none; color: #fbfbfb; cursor: pointer; font-size: 16px;">Upload</button>
+            <form action="/fileSharing/files/upload" method="post" target="_blank" enctype="multipart/form-data">
+                <input type="file" name="<!-- #NAME#ANCHOR# -->" required>
+                <button type="submit" style="margin-top: 20px; background-color: #404040; padding: 10px 20px; border: none; color: #fbfbfb; cursor: pointer; font-size: 16px;">Upload in new Tab</button>
             </form>
 
         </div>
