rewrote config parser (now fast) + added mission options

--- a/html/fileSharing/controlPanel/controlPanel.html
+++ b/html/fileSharing/controlPanel/controlPanel.html
@@ -119,10 +119,10 @@
     <main>
         <div class="control-panel">
             <h1>Control Panel</h1>
-            <form action="/fileSharing/controlPanel/createUser" method="get" style="display: inline;">
+            <form action="/fileSharing/controlPanel/createUser" method="post" style="display: inline;">
                 <button type="submit">Create User</button>
             </form>
-            <form action="/fileSharing/files" method="get" style="display: inline;">
+            <form action="/fileSharing/files" method="post" style="display: inline;">
                 <button type="submit">View Files</button>
             </form>
         </div>
